Fix tag alignment

--- a/src/components/Tag/Tag.module.scss
+++ b/src/components/Tag/Tag.module.scss
@@ -2,12 +2,12 @@
   border: 1px solid var(--grey-4);
   border-radius: 15px;
   display: inline-block;
-  padding: 1px var(--spacing-unit-1);
+  padding: 3px var(--spacing-unit-1);
   font-size: var(--font-size-9);
   color: var(--grey-3);
   text-transform: uppercase;
   white-space: nowrap;
-  line-height: 1.4;
+  line-height: 1;
   &.isSelected, {
     color: var(--white);
     background-color: var(--grey-3);
