--- a/src/components/Tags/Tags.module.scss
+++ b/src/components/Tags/Tags.module.scss
@@ -2,4 +2,5 @@
   display: flex;
   gap: var(--spacing-unit-1);
   flex-wrap: nowrap;
+  align-items: center;
 }
